fix: adjust inner log tables background

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -3528,6 +3528,10 @@ td.logMessage {
     position: absolute;
 }
 
+.logMessage > tbody tr {
+    background: transparent !important;
+}
+
 table.logs td.label {
     padding: 0 10px;
 }
