--- a/stackgres-k8s/src/api-web/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/api-web/src/main/resources/META-INF/resources/stackgres/style.css
@@ -4338,7 +4338,7 @@ span.closeLog:hover {
 
 /* Backups YAML */
 
-table.backups tr.base:hover td.timestamp:before, table.backups tr.base.open td.timestamp:before, table.pgConfig tr.toggle:not(.open):hover td:first-of-type:before, table.poolConfig tr.toggle:not(.open):hover td:first-of-type:before, table.backupConfig tr:not(.no-results):hover td:first-of-type:before, table.profiles tr:not(.no-results):hover td:first-of-type:before, table.clusterOverview tr:not(.no-results):hover td:first-of-type:before, table.profiles tr.open-profile td:first-of-type:before {
+table.backups tr.base:hover td.timestamp:before, table.backups tr.base.open td.timestamp:before, table.pgConfig tr.toggle:not(.open):hover td:first-of-type:before, table.poolConfig tr.toggle:not(.open):hover td:first-of-type:before, table.backupConfig tr:not(.no-results):hover td:first-of-type:before, table.profiles tr.base:hover td:first-of-type:before, table.clusterOverview tr:not(.no-results):hover td:first-of-type:before, table.profiles tr.open-profile td:first-of-type:before {
     content: " ";
     width: 5px;
     border: 1px solid var(--blue);
@@ -4460,15 +4460,15 @@ table.backups .name {
     max-width: 250px;
 }
 
-table.profiles td.inlineList svg, table.backupConfig ul.usedOn svg {
+table.profiles td.inlineList svg, table.backupConfig td.usedOn svg {
     width: 14px;
 }
 
-table.profiles td.inlineList svg path, table.backupConfig ul.usedOn svg path {
+table.profiles td.inlineList svg path, table.backupConfig td.usedOn svg path {
     fill: var(--blue);
 }
 
-table.profiles td.inlineList svg:hover path, table.backupConfig ul.usedOn svg:hover path {
+table.profiles td.inlineList svg:hover path, table.backupConfig td.usedOn svg:hover path {
     fill: var(--lblue);
 }
 
