--- a/stackgres-k8s/src/api-web/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/api-web/src/main/resources/META-INF/resources/stackgres/style.css
@@ -4495,3 +4495,169 @@ table.profiles td.inlineList svg:hover path, table.backupConfig td.usedOn svg:ho
     padding: 15px 0;
     width: 280px;
 }
+
+
+/* Extra Styling | June 15, 2020 */
+
+
+td.actions {
+    position: relative;
+    z-index: 1;
+}
+
+table.pgConfig.profiles td.actions a:first-of-type {
+    display: inline-block;
+}
+
+tr.details.pgConfig.open div, table.backupConfig .configurationDetails, table.backupConfig .storageDetails{
+    width: 50%;
+    float: left;
+    display: block;
+} 
+
+table.pgConfig tr.base.open td.parameters, table.pgConfig tr.base.open td.pgVersion, table.poolConfig tr.base.open td.parameters, table tr.open .fontZero {
+    font-size: 0;
+}
+
+td.usedOn {
+    padding: 0 !important;
+}
+
+td.usedOn li {
+    list-style: none;
+    height: 41px;
+    vertical-align: middle;
+    width: 100%;
+    border-bottom: 1px solid #f0f0f1;
+    padding-top: 12px;
+    padding-left: 10px;
+}
+
+td.usedOn li:last-child {
+    border-bottom: 0;
+}
+
+table tr.details .configurationDetails a, table tr.details .paramDetails a {
+    float: right;
+    display: inline-block;
+    padding: 2px 10px;
+}
+
+table.pgConfig tr.details a svg path, table.poolConfig tr.details a svg path {
+    fill: var(--blue);
+}
+
+table.pgConfig tr.details .configurationDetails table td.label, table.poolConfig tr.details .configurationDetails table td.label {
+    padding-right: 10px;
+    width: 140px;
+}
+
+table.pgConfig tr.details .paramDetails table td.label, table.poolConfig tr.details .paramDetails table td.label {
+    width: auto;
+    padding-right: 10px;
+}
+
+tr.details.pgConfig .title {
+    padding: 5px 27px 10px;
+    display: inline-block;
+    font-weight: bold;
+}
+
+.paramDetails table {
+    max-height: 240px;
+    overflow: auto;
+    display: block;
+    width: 100%;
+}
+
+.paramDetails table tbody {
+    width: 100%;
+    display: inline-table;
+}
+
+tr.details.pgConfig.open > td:first-child {
+    position: relative;
+}
+
+table.pgConfig tr.base.open td:before, table.poolConfig tr.base.open td:before {
+    border: 0;
+}
+
+table.pgConfig tr.details td.paramValue a, table.poolConfig tr.details td.paramValue a {
+    padding: 0;
+}
+
+table.pgConfig tr.details .paramDetails table td, table.poolConfig tr.details .paramDetails table td {
+    padding: 10px;
+}
+
+table.pgConfig tr.details .paramDetails table, table.poolConfig tr.details .paramDetails table {
+    border: 0;
+    border-bottom: 1px solid #f0f0f1;
+}
+
+table.pgConfig tr:nth-child(4n-2), table.pgConfig tr:nth-child(4n-2) + tr.details, table.pgConfig tr:nth-child(4n-2), table.poolConfig tr:nth-child(4n-2), table.poolConfig tr:nth-child(4n-2) + tr.details, table.poolConfig tr:nth-child(4n-2), table.backupConfig tr:nth-child(4n-2), table.backupConfig tr:nth-child(4n-2) + tr.details, table.backupConfig tr:nth-child(4n-2) {
+    background: #fff;
+}
+
+table.pgConfig tr.details .configurationDetails table, table.poolConfig tr.details .configurationDetails table {
+    margin-left: 0 !important;
+}
+
+tr.details.pgConfig .configurationDetails .title, tr.details.poolConfig .configurationDetails .title {
+    padding-left: 15px;
+}
+
+table.pgConfig tr.open td.configName, table.poolConfig tr.open td.configName {
+    position: absolute;
+    width: 100%;
+}
+
+table.pgConfig tr.details.open > td:first-child:before, table.poolConfig tr.details.open > td:first-child:before {
+    top: -23px;
+}
+
+td.inlineList ul {
+    list-style: none;
+}
+
+td.inlineList li {
+    display: inline-block;
+}
+
+td.inlineList li:not(:last-child):after {
+    content: ', ';
+}
+
+table.backupConfig span.title {
+    font-weight: bold;
+}
+
+table.backupConfig tr.details.show .configurationDetails td:first-of-type:before {
+    display:none;
+}
+
+table.backupConfig tr.details.show td:first-of-type {
+    padding-top: 10px !important;
+}
+
+tr.details td:last-of-type .configurationDetails table {
+    margin: 0 !important;
+}
+
+.configurationDetails span.title {
+    font-weight: bold;
+    display: inline-block;
+    padding: 10px 15px;
+}
+
+.backupConfig .storageDetails ul.yaml {
+    border: 1px solid #f0f0f1;
+    margin-top: 0;
+    padding: 10px 15px;
+}
+
+.paramValue svg.grayscale {
+    display: inline-block;
+    float: right;
+}
