feat: Setup Vue history mode so the app acts as a MPA

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -4666,3 +4666,9 @@ tr.details td:last-of-type .configurationDetails table {
     display: inline-block;
     float: right;
 }
+
+/* 404 Not Found */
+#notFound {
+    text-align: center;
+    padding: 100px;
+}
