fix: enable direct URL to every CRD on the UI

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -4372,7 +4372,7 @@ table.pgConfig, table.poolConfig {
     table-layout: fixed;
 }
 
-table.pgConfig tr:hover, table.poolConfig tr:hover {
+tr.base > td:not(.actions):hover {
     cursor: pointer;
 }
 
