--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -3,7 +3,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,hr,menu,nav,section
 
 /* General */
 :root {
-    --blue: red;
+    --blue: #00ADB5;
     --lblue: #00c5ce;
     --green: #00F900;
     --red: #FF2600;
