fix:added SGInstanceProfile, SGBackupConfig and SGBackups missing fields

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -4666,7 +4666,7 @@ table.pgConfig tr.details a svg path, table.poolConfig tr.details a svg path {
     fill: var(--blue);
 }
 
-table.pgConfig tr.details .configurationDetails table td.label, table.poolConfig tr.details .configurationDetails table td.label {
+table.pgConfig tr.details .configurationDetails table td.label, table.poolConfig tr.details .configurationDetails table td.label, table.backupConfig tr.details .configurationDetails table td.label {
     padding-right: 10px;
     width: 140px;
 }
