fix: min-height issue on sidebar items

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -927,9 +927,9 @@ ul.zg-ul-select.active li.active:hover {
     overflow: auto;
 }
 
-.set.active:not(.conf):not(.backups):not(.logs) { 
+/* .set.active:not(.conf):not(.backups):not(.logs) { 
     min-height: 100px; 
-}
+} */
 
 .set.clu.active {
     border-top: 0 !important;
