fix: add invitation to collaborate on the documentation sidebar | Fixes #510

--- a/doc/themes/sg-doc/layouts/partials/menu-footer.html
+++ b/doc/themes/sg-doc/layouts/partials/menu-footer.html
@@ -1,1 +1,3 @@
+<p>This documentation is open-source. Please help improve it by <a href="https://gitlab.com/ongresinc/stackgres/" target="_blank">filing issues or pull requests.</a></p>
+<hr/>
 <p>Coded with <a href="https://gitlab.com/ongresinc/stackgres"><i class="fas fa-heart"></i></a> by <a href="https://ongres.com">OnGres</a></p>
