fix: unproper rendering of long namespace names | Fixes #674

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -839,6 +839,10 @@ ul.zg-ul-select.active li.active:hover {
 
 #ns-select a {
     padding-left: 0;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #ns-select li {
