wip: enable site-wide tooltips

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -2833,7 +2833,7 @@ table .sort, a.uploadLink {
     cursor: pointer;
 }
 
-.sort th span:after {
+.sort th > span:after {
     content: "▾";
     opacity: 0;
     display: inline-block;
